--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.squareup.picasso:picasso:2.3.3'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
