--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.getstrength.myapplication.SignIn"
-            android:label="@string/app_name">
+            android:label="@string/sign_in_header">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
