--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,32 @@
 
         </activity>
 
+        <provider
+            android:name=".NotesProvider"
+            android:authorities="com.getstrength.myapplication.notesprovider"
+            android:exported="false"/>
+
+        <activity
+            android:name=".NotesActivity"
+            android:label=""
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+
+        <activity
+            android:name=".EditorActivity"
+            android:label="@string/title_activity_editor"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
 
         <activity
             android:name="com.getstrength.myapplication.SignIn"
             android:label="@string/sign_in_header">
-        </activity>
-
-        <activity
-            android:name=".EditorMainActivity"
-            android:parentActivityName=".MainActivity">
-
         </activity>
 
 
