--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest package="com.getstrength.myapplication"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_TIMER"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
