Added date to appbar in editor activity. todo: Make appbar clickable and extract data from edittext

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'io.realm:realm-android:0.87.5'
+    compile 'com.wdullaer:materialdatetimepicker:2.2.0'
+
 }
 
 
