--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,28 +30,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BasicActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-            -->
-        </activity>
-        <activity
             android:name=".EditorActivity"
             android:label="@string/title_activity_editor"
-            android:parentActivityName=".BasicActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:launchMode="singleTop"
-                android:value="com.getstrength.myapplication.BasicActivity"/>
+                android:value="com.getstrength.myapplication.MainActivity"/>
         </activity>
         <activity
             android:name=".SignIn"
@@ -63,7 +49,15 @@
             android:authorities="com.getstrength.provider.exercises">
         </provider>
 
-        <activity android:name=".SettingsActivity">
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/action_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity android:name=".SettingsActivity1">
         </activity>
     </application>
 
