Updated read mode and display

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.2.0'
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'com.squareup:android-times-square:1.6.4@aar'
     compile 'de.hdodenhof:circleimageview:2.0.0'
