--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -43,6 +44,7 @@
 
         <activity
             android:name=".SignIn"
+            android:screenOrientation="portrait"
             android:label="@string/sign_in_header">
         </activity>
 
@@ -54,12 +56,15 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
-        <activity android:name=".ReadActivity">
+        <activity
+            android:name=".ReadActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
