--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
-
-
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -14,10 +12,19 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        release {
+            storeFile file("myreleasekey.keystore")
+            storePassword "password"
+            keyAlias "MyReleaseKey"
+            keyPassword "password"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -26,14 +33,9 @@ android {
     }
 }
 
-
-
-
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-
 
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.prolificinteractive:material-calendarview:1.2.0'
